@@ -7,6 +7,7 @@ DEFINE_TEST_GROUP_INIT_H(list_tests_init);
 DEFINE_TEST_GROUP_INIT_H(hashtable_tests_init);
 DEFINE_TEST_GROUP_INIT_H(ptrarray_tests_init);
 DEFINE_TEST_GROUP_INIT_H(size_tests_init);
+DEFINE_TEST_GROUP_INIT_H(fake_tests_init);
 
 static Group test_groups [] = {	
 	{"string",    string_tests_init}, 
@@ -16,6 +17,7 @@ static Group test_groups [] = {
 	{"list",      list_tests_init},
 	{"hashtable", hashtable_tests_init},
 	{"sizes",     size_tests_init},
+	{"fake",      fake_tests_init},
 	{NULL, NULL}
 };
 
